<resources>
    <string name="communication">Communication</string>
    <string name="about_scraggle">How To Play</string>
    <string name="resume_game">Resume Game</string>
    <string name="word_game">Word Game</string>
    <string name="test_dictionary">Test Dictionary</string>
    <string name="dictionary">Dictionary</string>
    <string name="clear">Clear</string>
    <string name="app_name">NUMAD16S-DylanWight</string>
    <string name="action_settings">Settings</string>
    <string name="ok_label">OK</string>
    <string name="my_name">Dylan Wight</string>
    <string name="device_id">android.telephony.TelephonyManager.getDeviceId()</string>
    <string name="long_app_name">Ultimate Tic Tac Toe</string>
    <string name="restart_label">Restart</string>
    <string name="main_menu_label">Main Menu</string>
    <string name="tictactoe_menu_label">TicTacToe Menu</string>
    tictactoe_menu_label
    <string name="declare_winner">%1$s is the winner</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_title">About Ultimate Tic Tac Toe</string>
    <string name="about_label">About</string>
    <string name="about_dylan">
        Junior in Computer Science\n
        <i><u>dylangwight@gmail.com</u></i>\n
    </string>
    <string name="about_text">\
This game is played just like
regular Tic Tac Toe with one difference: to win a tile
you have to win a smaller game of Tic Tac Toe inside that tile.\n\
\n\
A tie happens when there are no further moves.
In the case of a tie in a small board, that will count as a win for
both sides in the larger game.
</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="return_to_menu">Return to menu</string>

    <string name="ack_dictionary">
        http://stackoverflow.com/questions/7117209/how-to-know-key-presses-in-edittext\n
        http://stackoverflow.com/questions/4590957/how-to-set-text-in-an-edittext\n
        http://stackoverflow.com/questions/3432970/import-textfile-and-read-line-by-line-in-java\n
        https://en.wikipedia.org/wiki/Trie\n
        http://stackoverflow.com/questions/6462105/how-do-i-access-androids-default-beep-sound\n
        https://sourcemaking.com/design_patterns/singleton/java/1
    </string>
    <string name="scraggle_how_to">
        In the first phase, select the longest scrambled word you can find in each grid.
        You will get to keep the letters you use in the second phase.
        You can clear your current word by clicking on a selected tile.
        \n\n
        In the second phase, make words by selecting letters in different grids.
        You will score points for each word you add. Rarer letters are worth more points!
    </string>

        <string name="ack_scraggle">
            I used www.stackoverflow.com and http://developer.android.com for genral java and android help.
            I tried to use www.androiddesignpatterns.com/2012/05/using-newinstance-to-instantiate.html
            to pass arguments into Fragments/Activities.
            The Background image and the sounds are taken from the Ultimate Tictactoe game.
        </string>

    <string name="ack_communication">
            I used www.stackoverflow.com for general java and android help. \n
            http://androidexample.com/Create_A_Simple_Listview_-_Android_Example/index.php?view=article_discription&amp;aid=65&amp;aaid=90 \n
            https://developers.google.com/cloud-messaging/android/client#add-config
        </string>
    <string name="send_google_message">Send Google Message</string>
    <string name="quit">Quit</string>
    <string name="tictactoe">TicTacToe</string>
    <string name="generate_error">Generate Error</string>
    <string name="global_firebase_message">Global Firebase Message</string>
    <string name="send">send</string>
    <string name="register">register</string>
    <string name="unregister">unregister</string>
    <string name="input_message_here">input message here ...</string>
    <string name="set_message">set message</string>
    <string name="global_message">Global Message</string>
    <string name="input_username_here">Input username here</string>
    <string name="gcm_intructions">Click user to send them a message, Register to allow messages to be send to you</string>
    <string name="reg_to_challenge">Register to challenge opponent</string>
    <string name="live_coop">Join Live Coop</string>
    <string name="leaderboard">View Leaderboard</string>
    <string name="challenge_player">Challenge a Friend</string>
    <string name="game_over">Game Over!</string>
    <string name="phase_1">"Phase One: "</string>
    <string name="phase_2">"Phase Two: "</string>
    <string name="single_player">Start Single Player</string>

    <!-- Food Grouper strings -->
    <string name="food_grouper">Food Grouper</string>
    <string name="listen_button_label">Start Reading</string>
    <string name="listen_button_instructions">Click to start reading in your food items including
    the quantity. For example, 5 apples, 2 cartons of eggs, etc.</string>
    <string name="listening">Listening...</string>
    <string name="app_title">Food Grouper</string>
    <string name="diet_tab_title">Diet</string>
    <string name="sort_tab_title">Sort</string>
    <string name="dictate_tab_title">Dictate</string>
    <string name="this_month_label">This Month</string>
    <string name="last_month_label">Last Month</string>
    <string name="all_label">All</string>
    <string name="trickiest_part">Trickiest Part</string>
    <string name="add_food_label">Add Servings</string>
    <string name="grain">Grain</string>
    <string name="veg">Veg</string>
    <string name="fruit">Fruit</string>
    <string name="protein">Protein</string>
    <string name="dairy">Dairy</string>
    <string name="fat">Fat</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tues</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thur</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="target">Target</string>
    <string name="about_description">Food Grouper will help make your diet healthier and more balanced by tracking the amount of each food group you eat each day. It will take in information about how many servings of each type of food you ate and give you a percentage breakdown of how your diet compares to the recommended diet. By tracking servings rather than calories or specific foods, Food Grouper makes tracking your food intake quick and painless. Food Grouper also offers customizable prompts throughout the day to remind you to track your food as well as a customizable target diet. No matter what your goals are, Food Grouper will help you to achieve them!</string>
    <string name="acknowledgements_decscription">We would like to acknowledge the following resources for helping to make Food Grouper the app that it is! \n\nGraphs: https://github.com/PhilJay/MPAndroidChart, Overall programming questions: http://stackoverflow.com/,
        Recommended diet information: http://www.newhealthguide.org/The-Eatwell-Plate-Percentages.html,
        Icon: http://www.choosemyplate.gov/</string>
    <string name="food_grouper_description">Food Grouper will help make your diet healthier and more balanced by tracking the amount of each food group you eat each day. It will take in information about how many servings of each type of food you ate and give you a percentage breakdown of how your diet compares to the recommended diet. By tracking servings rather than calories or specific foods, Food Grouper makes tracking your food intake quick and painless. Food Grouper also offers customizable prompts throughout the day to remind you to track your food as well as a customizable target diet. No matter what your goals are, Food Grouper will help you to achieve them!</string>
    <string name="food_grouper_instructions">\tThree times a day, you\'ll be automatically be reminded to estimate how many servings of each food group you\'ve eaten. We will track your entries and compare your diet breakdown to your target diet.\n\tYou can make additional food entries anytime you want. Your target diet and reminder times can be adjusted in Settings. \n</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_food_grouper">Welcome to Food Grouper!</string>
    <string name="add_entry">Add Entry</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="add_servings">Add Servings</string>

</resources>
