<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".communication.CommunicationActivity"
    tools:showIn="@layout/activity_communication"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/menu_background"
    android:elevation="@dimen/elevation_high"
    android:orientation="vertical"
    android:padding="@dimen/menu_padding">

    <TextView
        android:layout_width="@dimen/menu_width"
        android:layout_height="wrap_content"
        android:text="@string/communication"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="@dimen/menu_text_size"/>

    <Button
        android:id="@+id/global_firebase_message"
        android:text="@string/global_firebase_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/send_google_message"
        android:text="@string/send_google_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/acknowledgements"
        android:text="@string/acknowledgements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/quit"
        android:text="@string/quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</LinearLayout>

