<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:text="@string/gcm_intructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*" >

        <TableRow>

            <EditText
                android:id="@+id/username_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_username_here"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textColorHint="#238745"
                android:textSize="16sp" />

            <Button
                android:id="@+id/communication_registor_button"
                android:onClick="onClick"
                android:text="@string/register" />

            <Button
                android:id="@+id/communication_unregistor_button"
                android:onClick="onClick"
                android:text="@string/unregister" />
        </TableRow>
    </TableLayout>


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*" >

        <TableRow>

            <EditText
                android:id="@+id/communication_edit_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_message_here"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textColorHint="#238745"
                android:textSize="16sp" />

            <Button
                android:id="@+id/communication_clear"
                android:onClick="onClick"
                android:text="@string/clear" />
        </TableRow>
    </TableLayout>

    <ListView
        android:id="@+id/user_list"
        android:background="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>