<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:text="@string/global_message"
        android:textSize="@dimen/menu_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/communication_edit_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_message_here"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColorHint="#238745"
        android:textSize="16sp" />

    <Button
        android:id="@+id/set_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_message" />

    <TextView
        android:id="@+id/message_display"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>