<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".scraggle.ScraggleMenuActivity"
    tools:showIn="@layout/activity_scraggle_menu"
    android:layout_width="@dimen/menu_width"
    android:layout_height="wrap_content"
    android:background="@drawable/menu_background"
    android:elevation="@dimen/elevation_high"
    android:orientation="vertical"
    android:padding="@dimen/menu_padding">

    <Button
        android:id="@+id/new_game"
        android:text="@string/new_game_label"
        android:layout_width="@dimen/menu_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_button_margin"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/resume_game"
        android:text="@string/resume_game"
        android:layout_width="@dimen/menu_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_button_margin"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/about_scraggle"
        android:text="@string/about_scraggle"
        android:layout_width="@dimen/menu_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_button_margin"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/acknowledgements"
        android:text="@string/acknowledgements"
        android:layout_width="@dimen/menu_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_button_margin"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/quit"
        android:text="Quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_button_margin"
        android:layout_gravity="center"/>
</LinearLayout>

