<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/chart_view_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/month_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"/>
        <Button
            android:id="@+id/week_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/month_button"
            android:text="@string/week"/>
        <Button
            android:id="@+id/day_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/week_button"
            android:text="@string/day"/>
    </RelativeLayout>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/diet_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="5dp"
        android:layout_below="@+id/chart_view_buttons" />

</RelativeLayout>