<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SeekBar
        android:id="@+id/diet_graph_view_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="1"
        android:paddingTop="5dp"
        android:max="2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/last_month_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:paddingLeft="5dp"
            android:text="@string/last_month_label"/>

        <TextView
            android:id="@+id/all_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:paddingRight="5dp"
            android:layout_alignParentRight="true"
            android:gravity="center_horizontal"
            android:text="@string/all_label"/>

        <TextView
            android:id="@+id/this_month_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/last_month_label"
            android:layout_toLeftOf="@id/all_label"
            android:paddingBottom="2dp"
            android:paddingRight="50dp"
            android:gravity="center_horizontal"
            android:text="@string/this_month_label"/>

    </RelativeLayout>

    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/diet_graph" />

</LinearLayout>